orchestator and README

--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,20 @@
-# Token de acceso personal (PAT) con permisos a repos y projects
-GITHUB_TOKEN=ghp_*********
+# GitHub Issue Migration Configuration
+# Copy this file to .env and fill in your actual values
 
-# Organización de origen y destino
-ORG_SOURCE=my-org-source
-ORG_DEST=my-org-dest
+# GitHub Personal Access Token with repo, project, and admin:org scopes
+# Get your token from: https://github.com/settings/tokens
+GITHUB_TOKEN=ghp_your_token_here
 
-# Repos a migrar (separados por comas, mismo nombre en origen y destino)
-REPOS=my-repo-1,my-repo-2
+# Source organization (where issues are migrated FROM)
+ORG_SOURCE=source-org-name
 
-# Proyecto a migrar (mismo nombre en origen y destino)
-PROJECT=my-project-name
+# Destination organization (where issues are migrated TO) 
+ORG_DEST=destination-org-name
+
+# Comma-separated list of repositories to migrate (no spaces)
+# These repositories must exist in both source and destination orgs
+REPOS=repo1,repo2,repo3
+
+# Name of the GitHub Project V2 to sync (exact match, case-sensitive)
+# This project must exist in both source and destination orgs
+PROJECT=My Project Board Name
